--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -51,7 +51,7 @@
     height: calc(3rem + 12px);
     border-radius: 8px;
     border: 4px solid var(--gray-800);
-    outline: 2px solid var(--green-500);
+    outline: 2px solid var(--green-500);                                                                                                                                                
 }
 
 .authorInfo strong {
@@ -65,4 +65,59 @@
     font-size: 0.875rem;
     color: var(--gray-400);
     line-height: 1.6;
+}
+
+.commentForm {
+    width: 100%;
+    margin-top: 1.5rem;
+    padding-top: 1.5rem;
+    border-top: 1px solid var(--gray-600);
+    
+}
+
+.commentForm > strong {
+    line-height: 1.6;
+    color: var(--gray-100);
+}
+
+.commentForm textarea {
+    width: 100%;
+    background: var(--gray-900);
+    border: 0;
+    border-radius: 8px;
+    padding: 1rem;
+    resize: none;
+    color: var(--gray-400);
+    line-height: 1.4;
+    margin-top: 1rem;
+}
+
+.commentForm button[type=submit] {
+    padding: 1rem 1.5rem;
+    margin-top: 1rem;
+    border-radius: 8px;
+    border: 0;
+    background: var(--green-500);
+    color: var(--white);
+    font-weight: bold;
+    font-size: 0.875rem;
+    cursor: pointer;
+    transition: background-color 0.2s;
+
+    
+}
+
+.commentForm button[type=submit]:hover {
+    background: var(--green-300);
+}
+
+.commentForm footer {
+    visibility: hidden;
+    max-height: 0;
+}
+
+.commentForm:focus-within footer {
+    visibility: visible;
+    max-height: none;
+    transition: max-height 0.2s ease-in-out;
 }
