--- a/src/components/Post.module.css
+++ b/src/components/Post.module.css
@@ -102,9 +102,7 @@
     font-weight: bold;
     font-size: 0.875rem;
     cursor: pointer;
-    transition: background-color 0.2s;
-
-    
+    transition: background-color 0.2s;    
 }
 
 .commentForm button[type=submit]:hover {
@@ -120,4 +118,8 @@
     visibility: visible;
     max-height: none;
     transition: max-height 0.2s ease-in-out;
+}
+
+.commentList {
+    margin-top: 2rem;
 }
